--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   "author": "",
   "license": "ISC",
   "description": "Configuracion moderna para proyectos con NodeJS",
+  "dependencies": {
+    "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "c8": "^10.1.2",
@@ -42,4 +47,5 @@
   "engines": {
     "node": ">=20.0.0"
   }
+  
 }
