--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "description": "Configuracion moderna para proyectos con NodeJS",
   "dependencies": {
+    "axios": "^1.13.2",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0"
@@ -51,5 +52,4 @@
   "engines": {
     "node": ">=20.0.0"
   }
-  
 }
