--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,7 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
-      "#/*": ["src/*"],
+      "#*": ["./src/*"],
       "#config/*": ["src/config/*"],
       "#utils/*": ["src/utils/*"],
       "#services/*": ["src/services/*"],
