--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "description": "Configuracion moderna para proyectos con NodeJS",
   "dependencies": {
     "axios": "^1.13.2",
+    "cookie-parser": "^1.4.7",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
