--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
-    "openai": "^6.10.0"
+    "openai": "^6.10.0",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
